Fix footer overlapping

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,7 +1,8 @@
 html,
 body {
-  height: 100%;
+  min-height: 100vh;
 }
+
 body {
   background-color: #f5f5f5;
   color: $black;
@@ -12,9 +13,7 @@ body {
 }
 
 body {
-  min-height: 100vh;
   position: relative;
-  padding-bottom: 100px;
 }
 
 main {
@@ -22,16 +21,5 @@ main {
   max-width: 1400px;
   margin: 0 auto;
   padding: 0 50px;
-}
-
-header {
-  position: sticky;
-  top: 0;
-}
-
-footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  padding-bottom: 130px;
 }
