--- a/assets/scss/partials/footer.scss
+++ b/assets/scss/partials/footer.scss
@@ -1,4 +1,8 @@
 .footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
